# wolfpack

./: Cargo.toml  README.md  args.rs  config.nix  query.json  test.nix
profile_configs/: default.toml  hi.toml
src/: args.rs  main.rs
