[package]
name = "wolfpack"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive", "cargo"] }
inquire = "0.7.5"
reqwest = { version = "0.12.5", features = ["json", "socks"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.19"
